add forms to create new groups and to assign students to groups

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -36,7 +36,16 @@
     "LIST": "Llistat de grups",
     "ID": "Id. Grup",
     "CHOOSE": "Tria el grup",
-    "NOASSIGN": "No assignar grup"
+    "NOASSIGN": "No assignar grup",
+    "CONFIRMDELETE": "Segur que vols esborrar el grup amb id {{elementId}}?",
+    "RELATION": "relació grups/estudiants",
+    "STUDENTSLIST": "Llistat d'estudiants per grup",
+    "NAME": "Nom del grup",
+    "CREATED": "Nou grup creat correctament",
+    "DELETED": "Grup esborrat correctament",
+    "STUDENTDELETED": "Estudiant eliminat del grup amb èxit",
+    "CONFIRMREMOVAL": "Segur que vols treure a l'estudiant amb id {{elementId}} del grup?",
+    "STUDENTADDED": "Estudiant afegit al grup correctament"
   },
   "GRADE": {
     "GRADE": "Curs",
@@ -51,7 +60,10 @@
     "DELETED": "Curs esborrat correctament",
     "CONFIRMDELETE": "Segur que vols esborrar el curs amb id {{elementId}}?",
     "CONFIRMRELDELETE": "Si acceptes, esborraras la relació d'aquest curs amb la materia amb id {{elementId}}. Estas segur?",
-    "SELECTMATTER": "Sel·leciona una materia"
+    "SELECTMATTER": "Sel·leciona una materia",
+    "RELATION": "relació curs/materia",
+    "ADDMATTER": "Materia afegida al curs correctament",
+    "REMOVEMATTER": "Materia eliminada del curs correctament"
   },
   "MATTER": {
     "MATTER": "Matèria",
@@ -87,7 +99,8 @@
     "EDITED": "Professor modificat amb èxit",
     "DELETED": "Professor esborrat correctament",
     "CONFIRMDELETE": "Segur que vols esborrar el professor amb id {{elementId}}?",
-    "NEWTEACHER": "Crear un nou professor"
+    "NEWTEACHER": "Crear un nou professor",
+    "SELECTTEACHER": "Selecciona un professor"
   },
   "STUDIENTS": {
     "ID": "Id. Estudiant",
@@ -111,7 +124,8 @@
     "EDITED": "Estudiant modificat amb èxit",
     "DELETED": "Estudiant esborrat correctament",
     "CONFIRMDELETE": "Segur que vols esborrar el Estudiant amb id {{elementId}}?",
-    "NEWSTUDENT": "Crear un nou Estudiant"
+    "NEWSTUDENT": "Crear un nou Estudiant",
+    "SELECT": "Selecciona un estudiant"
   },
   "QUESTIONNAIRES": {
     "TITLE": "Qüestionaris",
@@ -381,6 +395,7 @@
     "GOBACK": "Tornar",
     "ME": "Jo",
     "OF": "de",
-    "ADD": "Afegir"
+    "ADD": "Afegir",
+    "CONFIRM": "Confirmar"
   }
 }
