Versión definitiva 2.0 | Textos traducidos

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -47,7 +47,7 @@
     "STUDENTDELETED": "Estudiant eliminat del grup amb èxit",
     "CONFIRMREMOVAL": "Segur que vols treure a l'estudiant amb id {{elementId}} del grup?",
     "STUDENTADDED": "Estudiant afegit al grup correctament",
-    "MYGAMES": "Jocs"
+    "MYGAMES": "JOCS"
   },
   "GRADE": {
     "GRADE": "Curs",
@@ -130,74 +130,95 @@
     "NEWSTUDENT": "Crear un nou Estudiant",
     "SELECT": "Selecciona un estudiant"
   },
-  "QUESTIONNAIRES": {
-    "TITLE": "Qüestionaris",
-    "ID": "ID del Qüestionari:",
-    "DELETE": "Eliminar Qüestionaris",
-    "CREATE": "Crear nou Qüestionaris",
-    "MYQUESTIONNAIRES": "Els meus qüestionaris",
-    "MYQUESTIONS": "Les meves preguntes",
-    "NEWQUESTION": "Crear una nova pregunta",
-    "TYPEOFQUESTION": "¿Quin tipus de pregunta vols?",
-    "TYPEOFQUESTION1": "Cap",
-    "TYPEOFQUESTION2": "Multiresposta",
-    "TYPEOFQUESTION3": "Pregunta oberta"
+  "QUESTION": {
+    "CREATING": "Creant una nova pregunta",
+    "STATEMENT": "Escriu l'enunciat",
+    "IMAGE": "Imatge (URL)",
+    "CATEGORY": "Categoria",
+    "DIFFICULTY": "Dificultat",
+    "ANSWERWHY": "Argumenta la resposta",
+    "NUMBEROFANSWERS": "Número de respostes",
+    "OPENANSWER": "Resposta oberta",
+    "ANSWER1": "Resposta número 1",
+    "ANSWER2": "Resposta número 2",
+    "ANSWER3": "Resposta número 3",
+    "ANSWER4": "Resposta número 4",
+    "ANSWER5": "Resposta número 5",
+    "ANSWER6": "Resposta número 6",
+    "CORRECTANSWERS": "Selecciona la/es resposta/es correctes",
+    "CREATE": "CREAR",
+    "TABLECATEGORY": "Categoria",
+    "TABLESTATEMENT": "Enunciat",
+    "TABLEIMAGE": "Imatge",
+    "TABLETYPEOFQUESTION": "Tipus",
+    "TABLEDIFFICULTY": "Dificultat",
+    "TABLECORRECTANSWER": "Resposta correcta",
+    "TABLEANSWER": "Respostes"
   },
   "QUESTIONNAIRE": {
-    "RESULTS": "Resultats Qüestionaris",
-    "STUDENT": "Estudiant",
-    "ACTIVE": " activat correctament",
-    "DEACTIVATE": " desactivat correctament",
-    "CREATED": "Qüestionari creat correctament!",
-    "DELETED": "Qüestionari eliminat correctament!",
-    "NOTDELETED": "El qüestionari seleccionat no existeix.",
-    "NOTSELECTED": "No s'ha seleccionat cap qüestionari",
-    "CORRECTANSWERERROR": "La resposta correcta ha de coincidir amb una de la respostes introduïdes",
-    "CORRECT_ANSWER": "Preguntes correctes",
-    "NO_CORRECT_ANSWER": "Preguntes incorrectes",
-    "RESULT": "Resultat",
-    "QUESTIONS": "Preguntes",
-    "ANSWERS": "Respostes",
-    "DELETE1": "Segur que vols eliminar el Qüestionari",
-    "DELETE2": "Eliminar",
-    "CANCEL": "Cancel·lar",
-    "QUESTION": "Pregunta",
-    "ANSWER1": "Resposta 1",
-    "ANSWER2": "Resposta 2",
-    "ANSWER3": "Resposta 3",
-    "ANSWER4": "Resposta 4",
-    "CORRECTANSWER": "Resposta Correcta",
-    "NEXT": "Següent",
-    "BACK": "Enrere",
-    "ANSWER_OPEN": "Pregunta amb resposta oberta",
-    "QUESTION_IMAGE": "Pregunta amb imatge",
-    "TEXT1": "Aquí està la fletxa desplegable ^",
-    "TEXT2": "Tipus de pregunta",
-    "URL": "URL de la imagen",
-    "TEXT3": "Max 40 caràcters",
-    "TEXT4": "Nom del Qüestionari",
-    "TEXT5": "En segons",
-    "TEXT6": "Temps total del Qüestionari",
-    "TEXT7": "Max 100 preguntes",
-    "TEXT8": "Nombre total de preguntes del Qüestionari",
-    "TEXT9": "Tipus de Qüestionari",
-    "TEXT10": "Resposta oberta",
-    "TEXT11": "Resposta múltiple",
-    "TEXT12": "Introduir la data",
-    "MARK1": "Nota del qüestionari: 10",
-    "MARK2": "Nota del qüestionari: 9 - 9.99",
-    "MARK3": "Nota del qüestionari: 8 - 8.99",
-    "MARK4": "Nota del qüestionari: 7 - 7.99",
-    "MARK5": "Nota del qüestionari: 6 - 6.99",
-    "MARK6": "Nota del qüestionari: 5 - 5.99",
-    "MARK7": "Nota del qüestionari: 0 - 4.99",
-    "MARK8": "Nota del qüestionari: 9 - 10",
-    "MARK9": "Nota del qüestionari: 7 - 8.99",
-    "MARK10": "Nota del qüestionari: 5 - 6.99",
-    "TEXTPOINTS": "Punts guanyats segons la nota del qüestionari",
-    "TEXTBADGES": "Insígnia guanyada  segons la nota del qüestionari",
-    "TEXTCARDS1": "guanyades  segons la nota del qüestionari",
-    "NOASSIGNEDCOLLECTION": "S'ha d'escollir una col·lecció"
+    "TITLE": "Qüestionaris",
+    "CREATING": "Creant un nou qüestionari",
+    "MYQUESTIONNAIRES": "Els meus qüestionaris",
+    "NEWQUESTIONNAIRE": "Crear qüestionari",
+    "MYQUESTIONS": "Les meves preguntes",
+    "NEWQUESTION": "Crear una pregunta",
+    "NAME": "Nom del qüestionari",
+    "DESCRIPTION": "Descripció del qüestionari",
+    "IMAGE": "Imatge del qüestionari (URL)",
+    "FILTERBYCATEGORY": "Filtrar per categoria",
+    "SELECTQUESTIONS": "Selecciona el qüestionari",
+    "CREATE": "Crear",
+    "TABLEIMAGE": "Imatge",
+    "TABLEID": "Identificador",
+    "TABLECATEGORY": "Categoria",
+    "TABLESTATEMENT": "Enunciat"
+  },
+  "GAMES": {
+    "NAMEGAME": "Nom del joc",
+    "GAMETYPE": "Selecciona el tipus de de joc",
+    "QUIZPIP": "QuizPip",
+    "1by1": "Pregunta a pregunta",
+    "Qlasspip": "Qlasspip",
+    "FlipCardsPip": "FlipCardsPip",
+    "TimeToLearn": "TimeToLearn",
+    "TrivialClip": "Joc del trivial",
+    "TIMEQUESTION": "Vols jugar amb temps?",
+    "TIMEINQUESTION": "Jugar amb temps de pregunta",
+    "TIMEINQUESTIONNAIRE": "Jugar amb temps de qüestionari",
+    "TIMENO": "Sense temps",
+    "QUESTIONTIMETEXT": "Temps total de cada pregunta (en s)",
+    "QUESTIONNAIRETIMETEXT": "Temps total per respondre el qüestionari (en s)",
+    "INTEAMS": "Jugar en equips?",
+    "INDIVIDUAL": "Individualment",
+    "TEAMS": "Jugar en equips",
+    "ONEORMOREDEVICE": "¿Com jugaran?",
+    "ONEDEVICE": "Thotom amb el seu dispositiu",
+    "ALLONEDEVICE": "Cada equip amb un móbil",
+    "STARTDATE": "Data d'inici del joc",
+    "FINISHDATE": "Data final per jugar",
+    "TYPEOFQUESTIONNAIRE": "Quin qüestionari vols utilitzar?",
+    "CREATEBUTTON": "Crear el joc",
+    "NEWGAME": "CREAR UN JOC",
+    "SEERESULTS": "VEURE ELS RESULTATS",
+    "ACTIVEQUESTIONNAIRES": "JOCS ACTIUS",
+    "TABLETYPEOFGAME": "Tipus de joc",
+    "TABLESTARTDATE": "Data d'inici",
+    "TABLEFINISHDATE": "Data final",
+    "TABLE_QUESTIONNAIREID": "Identificador",
+    "TABLE_QUESTIONNAIREIMAGE": "Imatge",
+    "TABLE_QUESTIONNAIRENAME": "Nom del qüestionari",
+    "TABLE_QUESTIONNAIREDESCRIPTION": "Descripció",
+    "PROGRAMMEDQUESTIONNAIRES": "JOCS PROGRAMATS",
+    "FINISHQUESTIONNAIRES": "JOCS FINALITZATS",
+    "SELECTQUESTIONNAIRE": "Selecciona un qüestionari",
+    "TABLEIDSTUDENT": "Identificador del estudiant",
+    "TABLEFINALMARK": "Nota final",
+    "TABLEANSWERSCORRECT": "Respostes correctes",
+    "TABLEANSWERSNOCORRECT": "Respostes incorrectes",
+    "TABLEUSERANSWERS": "Respostes del usuari",
+    "TABLEANSWERQUESTION": "Resposta número",
+    "TABLENOANSWER": "SENSE RESPOSTA",
+    "TABLENORESULTS": "SENSE RESULTATS"
   },
   "ERROR": {
     "EMPTYFIELDS": "Cal omplir tots els camps correctament",
