--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -129,75 +129,97 @@
     "NEWSTUDENT": "Create new student",
     "SELECT": "Select a student"
   },
-  "QUESTIONNAIRES": {
-    "TITLE": "Questionnaires",
-    "ID": "Questionnaire Id",
-    "DELETE": "Delete questionnaire",
-    "CREATE": "Create new questionnaire",
-    "MYQUESTIONNAIRES": "My questionnaires",
-    "MYQUESTIONS": "My questions",
-    "NEWQUESTION": "New question",
-    "TYPEOFQUESTION": "¿What type of question?",
-    "TYPEOFQUESTION1": "None",
-    "TYPEOFQUESTION2": "Multiple-choice",
-    "TYPEOFQUESTION3": "Open question"
-  },
-  "QUESTIONNAIRE": {
-    "RESULTS": "Results Questionnaire",
-    "STUDENT": "Student",
-    "ACTIVE": " successfully activated",
-    "DEACTIVATE": " deactivated correctly",
-    "CREATED": "Questionnaire created correctly!",
-    "DELETED": "Questionnaire deleted correctly!",
-    "NOTDELETED": "The selected questionnaire does not exist.",
-    "NOTSELECTED": "No questionnaire has been selected",
-    "CORRECTANSWERERROR": "The correct answer must match one of the answers entered",
-    "CORRECT_ANSWER": "Successful questions",
-    "NO_CORRECT_ANSWER": "Incorrect questions",
-    "RESULT": "Result",
-    "QUESTIONS": "Questions",
-    "ANSWERS": "Answers",
-    "DELETE1": "Are you sure you want to delete the Questionnaire",
-    "DELETE2": "Delete",
-    "CANCEL": "Cancel",
-    "QUESTION": "Question",
+  "QUESTION": {
+    "CREATING": "Creating a new question",
+    "STATEMENT": "Statement",
+    "IMAGE": "Image (URL)",
+    "CATEGORY": "Category",
+    "DIFFICULTY": "Difficulty",
+    "ANSWERWHY": "Justify the correct answer",
+    "NUMBEROFANSWERS": "Number of questions",
+    "OPENANSWER": "Open question",
     "ANSWER1": "Answer 1",
     "ANSWER2": "Answer 2",
     "ANSWER3": "Answer 3",
     "ANSWER4": "Answer 4",
-    "CORRECTANSWER": "Correct answer",
-    "NEXT": "Next",
-    "BACK": "Back",
-    "ANSWER_OPEN": "Question with open answer",
-    "QUESTION_IMAGE": "Question with image",
-    "TEXT1": "Here is the drop-down arrow ^",
-    "TEXT2": "Type of Question",
-    "URL": "Image URL",
-    "TEXT3": "Max 40 characters",
-    "TEXT4": "Questionnaire name",
-    "TEXT5": "In seconds",
-    "TEXT6": "Total time of the Questionnaire",
-    "TEXT7": "Max 100 Questions",
-    "TEXT8": "Total number of questions in the Questionnaire",
-    "TEXT9": "Type of Questionnaire",
-    "TEXT10": "Open answer",
-    "TEXT11": "Multiple answer",
-    "TEXT12": "Enter date",
-    "MARK1": "Questionnaire mark: 10",
-    "MARK2": "Questionnaire mark: 9 - 9.99",
-    "MARK3": "Questionnaire mark: 8 - 8.99",
-    "MARK4": "Questionnaire mark: 7 - 7.99",
-    "MARK5": "Questionnaire mark: 6 - 6.99",
-    "MARK6": "Questionnaire mark: 5 - 5.99",
-    "MARK7": "Questionnaire mark: 0 - 4.99",
-    "MARK8": "Questionnaire mark: 9 - 10",
-    "MARK9": "Questionnaire mark: 7 - 8.99",
-    "MARK10": "Questionnaire mark: 5 - 6.99",
-    "TEXTPOINTS": "Points earned according to the grade on the questionnaire",
-    "TEXTBADGES": "Badge won according to questionnaire grade",
-    "TEXTCARDS1": "won according to questionnaire grade",
-    "NOASSIGNEDCOLLECTION": "You have to choose a collection"
+    "ANSWER5": "Answer 5",
+    "ANSWER6": "Answer 6",
+    "CORRECTANSWERS": "Select the correct answer/s",
+    "CREATE": "CREATE",
+    "TABLECATEGORY": "Category",
+    "TABLESTATEMENT": "Statement",
+    "TABLEIMAGE": "Image",
+    "TABLETYPEOFQUESTION": "Type",
+    "TABLEDIFFICULTY": "Difficulty",
+    "TABLECORRECTANSWER": "Correct answer",
+    "TABLEANSWER": "Answers"
   },
+  "QUESTIONNAIRE": {
+    "TITLE": "Questionnaires",
+    "CREATING": "Creating a new questionnaire",
+    "MYQUESTIONNAIRES": "My questionnaires",
+    "NEWQUESTIONNAIRE": "Create questionnaire",
+    "MYQUESTIONS": "My questions",
+    "NEWQUESTION": "Create new question",
+    "NAME": "Name",
+    "DESCRIPTION": "Description",
+    "IMAGE": "Image (URL)",
+    "FILTERBYCATEGORY": "Filter by category",
+    "SELECTQUESTIONS": "Select the questionnaire",
+    "CREATE": "Create",
+    "TABLEIMAGE": "Image",
+    "TABLEID": "Identifier",
+    "TABLECATEGORY": "Category",
+    "TABLESTATEMENT": "Statement"
+  },
+  "GAMES": {
+    "NAMEGAME": "Name of the game",
+    "GAMETYPE": "Type of game",
+    "QUIZPIP": "QuizPip",
+    "1by1": "Question by Question",
+    "Qlasspip": "Qlasspip",
+    "FlipCardsPip": "FlipCardsPip",
+    "TimeToLearn": "TimeToLearn",
+    "TrivialClip": "Trivial game",
+    "TIMEQUESTION": "Do you want to play with time?",
+    "TIMEINQUESTION": "Play with question time",
+    "TIMEINQUESTIONNAIRE": "Play with questionnaire time",
+    "TIMENO": "Without time",
+    "QUESTIONTIMETEXT": "Time of each question (en s)",
+    "QUESTIONNAIRETIMETEXT": "Time of the questionnaire (en s)",
+    "INTEAMS": "Play on teams?",
+    "INDIVIDUAL": "Individually",
+    "TEAMS": "Play with teams",
+    "ONEORMOREDEVICE": "How are we going to play?",
+    "ONEDEVICE": "Eachone with his device",
+    "ALLONEDEVICE": "Each team with one device",
+    "STARTDATE": "Start date of the game",
+    "FINISHDATE": "Deadline of the game",
+    "TYPEOFQUESTIONNAIRE": "Which questionnarie?",
+    "CREATEBUTTON": "Create",
+    "NEWGAME": "CREATE A GAME",
+    "SEERESULTS": "WATCH THE RESULTS",
+    "ACTIVEQUESTIONNAIRES": "ACTIVE GAMES",
+    "TABLETYPEOFGAME": "Type of game",
+    "TABLESTARTDATE": "Start date",
+    "TABLEFINISHDATE": "Deadline",
+    "TABLE_QUESTIONNAIREID": "Identifier",
+    "TABLE_QUESTIONNAIREIMAGE": "Image",
+    "TABLE_QUESTIONNAIRENAME": "Name of the questionnaire",
+    "TABLE_QUESTIONNAIREDESCRIPTION": "Description",
+    "PROGRAMMEDQUESTIONNAIRES": "PROGRAMMED GAMES",
+    "FINISHQUESTIONNAIRES": "FINISH GAMES",
+    "SELECTQUESTIONNAIRE": "Select one questionnaire",
+    "TABLEIDSTUDENT": "Student identifier",
+    "TABLEFINALMARK": "Final mark",
+    "TABLEANSWERSCORRECT": "Correct answers",
+    "TABLEANSWERSNOCORRECT": "Wrong answers",
+    "TABLEUSERANSWERS": "Student answers",
+    "TABLEANSWERQUESTION": "Answer number",
+    "TABLENOANSWER": "NOT ANSWERED",
+    "TABLENORESULTS": "WITHOUT RESULTS"
+  },
+
   "ERROR": {
     "EMPTYFIELDS": "All fields must be filled in correctly",
     "LOGIN_FAILED": "The username and/or password are invalid.",
