--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -264,74 +264,95 @@
     "NEWSTUDENT": "Crear un nuevo Estudiante",
     "SELECT": "Selecciona a un estudiante"
   },
-  "QUESTIONNAIRES": {
-    "TITLE": "Cuestionarios",
-    "ID": "ID del Cuestionario",
-    "DELETE": "Eliminar Cuestionario",
-    "CREATE": "Crear nuevo cuestionario",
-    "MYQUESTIONNAIRES": "Mis cuestionarios",
-    "MYQUESTIONS": "Mis preguntas",
-    "NEWQUESTION": "Crear nueva pregunta",
-    "TYPEOFQUESTION": "¿Que tipo de pregunta?",
-    "TYPEOFQUESTION1": "Ninguna",
-    "TYPEOFQUESTION2": "Multi-respuesta",
-    "TYPEOFQUESTION3": "Respuesta abierta"
+  "QUESTION": {
+    "CREATING": "Creando una nueva pregunta",
+    "STATEMENT": "Enunciado",
+    "IMAGE": "Imagen (URL)",
+    "CATEGORY": "Categoria",
+    "DIFFICULTY": "Dificultat",
+    "ANSWERWHY": "Argumenta la respuesta",
+    "NUMBEROFANSWERS": "Número de respuestas",
+    "OPENANSWER": "Respuesta abierta",
+    "ANSWER1": "Respuesta número 1",
+    "ANSWER2": "Respuesta número 2",
+    "ANSWER3": "Respuesta número 3",
+    "ANSWER4": "Respuesta número 4",
+    "ANSWER5": "Respuesta número 5",
+    "ANSWER6": "Respuesta número 6",
+    "CORRECTANSWERS": "Selecciona la/s respuesta/s correctas",
+    "CREATE": "CREAR",
+    "TABLECATEGORY": "Categoria",
+    "TABLESTATEMENT": "Enunciado",
+    "TABLEIMAGE": "Imagen",
+    "TABLETYPEOFQUESTION": "Tipo",
+    "TABLEDIFFICULTY": "Dificultad",
+    "TABLECORRECTANSWER": "Respuesta correcta",
+    "TABLEANSWER": "Respuestas"
   },
   "QUESTIONNAIRE": {
-    "RESULTS": "Resultados Cuestionario",
-    "STUDENT": "Estudiante",
-    "ACTIVE": " activado correctamente",
-    "DEACTIVATE": " desactivado correctamente",
-    "CREATED": "Cuestionario creado correctamente!",
-    "DELETED": "Cuestionario eliminado correctamente!",
-    "NOTDELETED": "El cuestionario seleccionado no existe.",
-    "NOTSELECTED": "No se ha seleccionado ningún cuestionario",
-    "CORRECTANSWERERROR": "La respuesta correcta tiene que coincidir con una de las respuesta introducidas",
-    "CORRECT_ANSWER": "Preguntas acertadas",
-    "NO_CORRECT_ANSWER": "Preguntas incorrectas",
-    "RESULT": "Resultado",
-    "QUESTIONS": "Preguntas",
-    "ANSWERS": "Respuestas",
-    "DELETE1": "¿Seguro que quieres eliminar el Cuestionario",
-    "DELETE2": "Eliminar",
-    "CANCEL": "Cancelar",
-    "QUESTION": "Pregunta",
-    "ANSWER1": "Respuesta 1",
-    "ANSWER2": "Respuesta 2",
-    "ANSWER3": "Respuesta 3",
-    "ANSWER4": "Respuesta 4",
-    "CORRECTANSWER": "Respuesta Correcta",
-    "NEXT": "Siguiente",
-    "BACK": "Atrás",
-    "ANSWER_OPEN": "Pregunta con respuesta abierta",
-    "QUESTION_IMAGE": "Pregunta con imagen",
-    "TEXT1": "Aquí está la flecha desplegable ^",
-    "TEXT2": "Tipo de Pregunta",
-    "URL": "URL de la imagen",
-    "TEXT3": "Max 40 caracteres",
-    "TEXT4": "Nombre del Cuestionario",
-    "TEXT5": "En segundos",
-    "TEXT6": "Tiempo total del Cuestionario",
-    "TEXT7": "Max 100 preguntas",
-    "TEXT8": "Número total de preguntas del Cuestionario",
-    "TEXT9": "Tipo de Cuestionario",
-    "TEXT10": "Respuesta abierta",
-    "TEXT11": "Respuesta múltiple",
-    "TEXT12": "Introducir la fecha",
-    "MARK1": "Nota del cuestionario: 10",
-    "MARK2": "Nota del cuestionario: 9 - 9.99",
-    "MARK3": "Nota del cuestionario: 8 - 8.99",
-    "MARK4": "Nota del cuestionario: 7 - 7.99",
-    "MARK5": "Nota del cuestionario: 6 - 6.99",
-    "MARK6": "Nota del cuestionario: 5 - 5.99",
-    "MARK7": "Nota del cuestionario: 0 - 4.99",
-    "MARK8": "Nota del cuestionario: 9 - 10",
-    "MARK9": "Nota del cuestionario: 7 - 8.99",
-    "MARK10": "Nota del cuestionario: 5 - 6.99",
-    "TEXTPOINTS": "Puntos ganados según la nota del cuestionario",
-    "TEXTBADGES": "Insígnia ganada según la nota del cuestionario",
-    "TEXTCARDS1": "ganadas  según la nota del cuestionario",
-    "NOASSIGNEDCOLLECTION": "Hay que escoger una colección"
+    "TITLE": "Cuestionarios",
+    "CREATING": "Creando un nuevo cuestionario",
+    "MYQUESTIONNAIRES": "Mis cuestionarios",
+    "NEWQUESTIONNAIRE": "Crear cuestionario",
+    "MYQUESTIONS": "Mis preguntas",
+    "NEWQUESTION": "Crear pregunta",
+    "NAME": "Nombre del cuestionario",
+    "DESCRIPTION": "Descripción del cuestionario",
+    "IMAGE": "Imagen del cuestionario (URL)",
+    "FILTERBYCATEGORY": "Filtrar por categoria",
+    "SELECTQUESTIONS": "Selecciona el cuestionario",
+    "CREATE": "Crear",
+    "TABLEIMAGE": "Imagen",
+    "TABLEID": "Identificador",
+    "TABLECATEGORY": "Categoria",
+    "TABLESTATEMENT": "Enunciado"
+  },
+  "GAMES": {
+    "NAMEGAME": "Nombre del juego",
+    "GAMETYPE": "Tipo de juego",
+    "QUIZPIP": "QuizPip",
+    "1by1": "Pregunta a pregunta",
+    "Qlasspip": "Qlasspip",
+    "FlipCardsPip": "FlipCardsPip",
+    "TimeToLearn": "TimeToLearn",
+    "TrivialClip": "Juego del trivial",
+    "TIMEQUESTION": "¿Quieres jugar con tiempo?",
+    "TIMEINQUESTION": "Jugar con tiempo de pregunta",
+    "TIMEINQUESTIONNAIRE": "Jugar con tiempo de cuestionario",
+    "TIMENO": "Sin tiempo",
+    "QUESTIONTIMETEXT": "Tiempo total de cada pregunta (en s)",
+    "QUESTIONNAIRETIMETEXT": "Tiempo total del cuestionario (en s)",
+    "INTEAMS": "¿Quieres jugar en equipo?",
+    "INDIVIDUAL": "Individualmente",
+    "TEAMS": "Jugar en equipos",
+    "ONEORMOREDEVICE": "¿Como jugarán?",
+    "ONEDEVICE": "Todo el mundo con su dispositivo",
+    "ALLONEDEVICE": "Cada equio con un dispositivo",
+    "STARTDATE": "Fecha de inicio del juego",
+    "FINISHDATE": "Fecha límite para jugar",
+    "TYPEOFQUESTIONNAIRE": "¿Que cuestionario quieres utilizar?",
+    "CREATEBUTTON": "Crear",
+    "NEWGAME": "CREAR UN JUEGO",
+    "SEERESULTS": "VER RESULTADOS",
+    "ACTIVEQUESTIONNAIRES": "JUEGOS ACTIVOS",
+    "TABLETYPEOFGAME": "Tipo de juego",
+    "TABLESTARTDATE": "Fecha de inicio",
+    "TABLEFINISHDATE": "Fecha final",
+    "TABLE_QUESTIONNAIREID": "Identificador",
+    "TABLE_QUESTIONNAIREIMAGE": "Imagen",
+    "TABLE_QUESTIONNAIRENAME": "Nombre del cuestionario",
+    "TABLE_QUESTIONNAIREDESCRIPTION": "Descripción",
+    "PROGRAMMEDQUESTIONNAIRES": "JUEGOS PROGRAMADOS",
+    "FINISHQUESTIONNAIRES": "JUEGOS FINALIZADOS",
+    "SELECTQUESTIONNAIRE": "Selecciona un cuestionario",
+    "TABLEIDSTUDENT": "Identificador del estudiante",
+    "TABLEFINALMARK": "Nota final",
+    "TABLEANSWERSCORRECT": "Respuestas correctas",
+    "TABLEANSWERSNOCORRECT": "Respuestas incorrectas",
+    "TABLEUSERANSWERS": "Respuestas del usuario",
+    "TABLEANSWERQUESTION": "Respuesta número",
+    "TABLENOANSWER": "NO RESPONDIDA",
+    "TABLENORESULTS": "SIN RESULTADOS"
   },
   "ERROR": {
     "EMPTYFIELDS": "Hay que rellenar todos los campos correctamente",
