Versión definitiva 2.1 | Añadidos todos los txt

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -166,7 +166,7 @@
     "DESCRIPTION": "Descripció del qüestionari",
     "IMAGE": "Imatge del qüestionari (URL)",
     "FILTERBYCATEGORY": "Filtrar per categoria",
-    "SELECTQUESTIONS": "Selecciona el qüestionari",
+    "SELECTQUESTIONS": "Selecciona les preguntes",
     "CREATE": "Crear",
     "TABLEIMAGE": "Imatge",
     "TABLEID": "Identificador",
